--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "emailjs-com": "^3.2.0",
+    "googleapis": "^134.0.0",
     "mongoose": "^8.1.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
