--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary-react": "^1.8.1",
+    "dropbox": "^10.34.0",
     "emailjs-com": "^3.2.0",
     "googleapis": "^134.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "mongoose": "^8.1.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
+    "next-cloudinary": "^6.5.1",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18"
