--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.2.0",
+    "cloudinary-core": "^2.13.1",
     "cloudinary-react": "^1.8.1",
-    "dropbox": "^10.34.0",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
-    "googleapis": "^134.0.0",
-    "isomorphic-fetch": "^3.0.0",
     "mongoose": "^8.1.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
