--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "cloudinary-core": "^2.13.1",
@@ -19,9 +20,12 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
     "next-cloudinary": "^6.5.1",
+    "postcss": "^8.4.38",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal-image": "^2.6.0",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^8",
