--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "exif-js": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "mongoose": "^8.1.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
@@ -25,7 +27,8 @@
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
     "react-modal-image": "^2.6.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
