--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "autoprefixer": "^10.4.19",
     "aws4": "^1.13.0",
     "axios": "^1.7.2",
@@ -25,6 +26,7 @@
     "next-auth": "^5.0.0-beta.3",
     "next-cloudinary": "^6.5.1",
     "postcss": "^8.4.38",
+    "primereact": "^10.6.6",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
