--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.2.0",
     "cloudinary-core": "^2.13.1",
     "cloudinary-react": "^1.8.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "exif-js": "^2.3.0",
