--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@smastrom/react-rating": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "aws4": "^1.13.0",
     "axios": "^1.7.2",
@@ -18,6 +19,7 @@
     "cloudinary-core": "^2.13.1",
     "cloudinary-react": "^1.8.1",
     "date-fns": "^3.6.0",
+    "disqus-react": "^1.1.5",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "exif-js": "^2.3.0",
