--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
     "react-modal-image": "^2.6.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.4.4",
     "tw-elements": "^2.0.0"
   },
