--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-modal-image": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.4.4",
-    "tw-elements": "^2.0.0"
+    "tw-elements": "^2.0.0",
+    "voyageverse": "file:"
   },
   "devDependencies": {
     "eslint": "^8",
