--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "exif-js": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "mongoose": "^8.1.1",
-    "next": "14.0.4",
+    "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.3",
     "next-cloudinary": "^6.5.1",
-    "postcss": "^8.4.38",
     "primereact": "^10.6.6",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-animated-numbers": "^0.17.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-modal-image": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.4.4",
@@ -41,6 +40,9 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.47",
+    "postcss-scss": "^4.0.9",
+    "sass": "^1.79.4"
   }
 }
