--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.2.0",
     "cloudinary-core": "^2.13.1",
     "cloudinary-react": "^1.8.1",
+    "core-js": "^3.40.0",
     "date-fns": "^3.6.0",
     "disqus-react": "^1.1.5",
     "dotenv": "^16.4.5",
