--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-modal-image": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3.4.4",
